src/snapshots/bluetui__help__tests__RequestConfirmation-121.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                                               ↵  Ok | 󱊷  Discard | ⇄ Nav                                                "
"                                                                                                                         "
