src/snapshots/bluetui__help__tests__RequestConfirmation-80.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                           ↵  Ok | 󱊷  Discard | ⇄ Nav                           "
"                                                                                "
