src/snapshots/bluetui__help__tests__RequestConfirmation-81.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                           ↵  Ok | 󱊷  Discard | ⇄ Nav                            "
"                                                                                 "
