src/snapshots/bluetui__help__tests__SetDeviceAliasBox-80.snap
---
source: src/help.rs
expression: terminal.backend()
---
"                              󱊷  Discard | ↵  Apply                             "
"                                                                                "
